# CutieysBot

./: README.md
CutieysBot Source Code/: config.json  main.py  pyproject.toml
CutieysBot Source Code/cogs/: botinfo.py  events.py  fun.py  info.py  mod.py  status.py
